add state username to duplicate participation API requests
