# match/src/Piipan.Match.Orchestrator/Api.cs
@@ -4,6 +4,7 @@ using System.IO;
 using System.Linq;
 using System.Net;
 using System.Net.Http;
+using System.Net.Http.Headers;
 using System.Threading.Tasks;
 using System.Web.Http;
 using Microsoft.AspNetCore.Http;
@@ -14,6 +15,8 @@ using Microsoft.Extensions.Logging;
 using Newtonsoft.Json;
 using Piipan.Match.Shared;
 using Piipan.Shared.Authentication;
+
+#nullable enable
 
 namespace Piipan.Match.Orchestrator
 {
@@ -48,6 +51,12 @@ namespace Piipan.Match.Orchestrator
             try
             {
                 log.LogInformation("Executing request from user {User}", req.HttpContext?.User.Identity.Name);
+
+                string? username = req.Headers["X-username"];
+                if(username is string)
+                {
+                    log.LogInformation("with username {Username}", username);
+                }
 
                 var incoming = await new StreamReader(req.Body).ReadToEndAsync();
                 var request = Parse(incoming, log);
@@ -138,6 +147,12 @@ namespace Piipan.Match.Orchestrator
             ILogger log)
         {
             log.LogInformation("Executing request from user {User}", req.HttpContext?.User.Identity.Name);
+
+            string? username = req.Headers["X-username"];
+            if(username is string)
+            {
+                log.LogInformation("with username {Username}", username);
+            }
 
             LookupResponse response = new LookupResponse { Data = null };
             response.Data = await Lookup.Retrieve(lookupId, _lookupStorage, log);
